# Fast-CUDA-Filters

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_colab.sh  requirements.txt
benchmarks/: benchmark.py
python_bindings/: bindings.cpp  setup.py  setup_simple.py
src/: box_blur.cu  convolution.cu  cuda_filters.h  gaussian_blur.cu  main.cpp  sharpening.cu  sobel.cu  utils.cuh
tests/: validate.py
